# nvcf

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BAZEL.md  BUILD.bazel  MODULE.bazel  NOTICE  README.md  dependencies.md  go.work.bazel  setup.sh
ci/: Dockerfile.bazel  check-github-commit-message.sh
src/clis/nvcf-cli/cmd/: BUILD.bazel  cluster_registration.go  function.go  function_llm_model_test.go  self_hosted_control_plane.go  self_hosted_control_plane_test.go  self_hosted_down.go  self_hosted_down_test.go  self_hosted_helm_runtime.go  self_hosted_uninstall.go  self_hosted_uninstall_test.go  self_hosted_up.go  self_hosted_up_test.go
src/clis/nvcf-cli/internal/agentskill/: BUILD.bazel  skilldata_generated.go
src/clis/nvcf-cli/internal/client/: BUILD.bazel  clusters.go  clusters_test.go  multi_token_transport.go  multi_token_transport_test.go
src/clis/nvcf-cli/internal/k8s/: BUILD.bazel
src/clis/nvcf-cli/internal/openbao/: BUILD.bazel
src/clis/nvcf-cli/internal/selfhosted/: BUILD.bazel  helm_runtime.go  inotify_probe.go  inotify_probe_test.go  preflight.go  preflight_test.go  register.go  register_test.go  render.go  render_test.go
src/clis/nvcf-cli/internal/state/: BUILD.bazel
src/compute-plane-services/byoo-otel-collector/cmd/byoo-otel-collector/: BUILD.bazel
src/compute-plane-services/byoo-otel-collector/internal/cli/: BUILD.bazel
src/compute-plane-services/byoo-otel-collector/internal/logger/: BUILD.bazel
src/invocation-plane-services/llm-api-gateway/: .bazelignore  .bazelrc  .dockerignore  .gitignore  AGENTS.md  BUILD.bazel  Dockerfile  MODULE.bazel  NOTICE  README.md  go.mod  go.sum
src/invocation-plane-services/llm-api-gateway/api/: BUILD.bazel  auth_middleware.go  auth_middleware_test.go  chat_handler.go  context.go  embeddings_handler_test.go  handlers.go  middleware.go  middleware_telemetry_test.go  middleware_test.go  model_ids.go  model_ids_test.go  observability.go  openai_endpoint_handlers.go  openai_remaining_handlers.go  openai_routes_test.go  proxy_handler.go  rate_limit_accounting_test.go  ratelimit.go  responses_converter.go  responses_handler.go  responses_handler_test.go  session_affinity.go  session_affinity_test.go  token_count.go  token_count_test.go
src/invocation-plane-services/llm-api-gateway/config/: BUILD.bazel  config.go  config_test.go
src/invocation-plane-services/llm-api-gateway/mcp/: BUILD.bazel  approval.go
src/invocation-plane-services/llm-api-gateway/models/: BUILD.bazel  openai.go  openai_audio.go  openai_tts.go
src/invocation-plane-services/llm-api-gateway/nvcf/: BUILD.bazel  client.go  client_test.go  types.go
src/invocation-plane-services/llm-api-gateway/provider/: BUILD.bazel  echo.go  provider.go  stargate.go  stargate_test.go
src/invocation-plane-services/llm-api-gateway/pubsub/: BUILD.bazel  consumer.go  publisher.go  receivers.go
src/invocation-plane-services/llm-api-gateway/ratelimit/: BUILD.bazel  nats_synchronizer.go  olric_cluster_test.go  pubsub_consumer.go  pubsub_consumer_mock_test.go  pubsub_synchronizer.go  pubsub_synchronizer_test.go  ratelimit.go  resources.go  sync_events.go
src/invocation-plane-services/llm-api-gateway/ratelimitsync/: BUILD.bazel  runtime.go  runtime_test.go
src/invocation-plane-services/llm-api-gateway/requestctx/: BUILD.bazel  requestctx.go
src/invocation-plane-services/llm-api-gateway/server/: BUILD.bazel  server.go
src/invocation-plane-services/llm-api-gateway/telemetry/: BUILD.bazel  auth_metrics_test.go  metrics.go  olric_collector.go  olric_collector_test.go
src/invocation-plane-services/llm-api-gateway/templating/: BUILD.bazel  doc.go
src/invocation-plane-services/llm-api-gateway/util/: BUILD.bazel  keylocks.go  olric.go  olric_discovery_test.go
src/invocation-plane-services/llm-gateway/: .bazelignore  .bazelrc  .gitignore  AGENTS.md  Dockerfile  MODULE.bazel  NOTICE  README.md  go.mod  go.sum
src/invocation-plane-services/llm-gateway/api/: BUILD.bazel  auth_middleware.go  chat_handler.go  handlers.go  middleware.go  middleware_telemetry_test.go  middleware_test.go  observability.go  openai_routes_test.go  responses_handler.go  responses_handler_test.go  session_affinity.go  session_affinity_test.go
src/invocation-plane-services/llm-gateway/cache/: BUILD.bazel
src/invocation-plane-services/llm-gateway/config/: BUILD.bazel  config.go  config_test.go
src/invocation-plane-services/llm-gateway/mcp/: BUILD.bazel
src/invocation-plane-services/llm-gateway/models/: BUILD.bazel
src/invocation-plane-services/llm-gateway/nvcf/: BUILD.bazel  client.go  client_test.go
src/invocation-plane-services/llm-gateway/patches/: daulet_tokenizers_strip_rust_build.patch  nvidia_lpu_harmony_build.patch  nvidia_lpu_minijinja_build.patch
src/invocation-plane-services/llm-gateway/provider/: BUILD.bazel  stargate.go  stargate_test.go
src/invocation-plane-services/llm-gateway/pubsub/: BUILD.bazel  consumer.go  publisher.go
src/invocation-plane-services/llm-gateway/ratelimit/: BUILD.bazel  nats_synchronizer.go  pubsub_synchronizer.go  sync_events.go
src/invocation-plane-services/llm-gateway/ratelimitsync/: BUILD.bazel
src/invocation-plane-services/llm-gateway/requestctx/: BUILD.bazel  requestctx.go
src/invocation-plane-services/llm-gateway/server/: BUILD.bazel
src/invocation-plane-services/llm-gateway/telemetry/: BUILD.bazel  metrics.go  metrics_test.go  prometheus.go  runtime.go  telemetry.go
src/invocation-plane-services/llm-gateway/templating/: BUILD.bazel
src/invocation-plane-services/llm-gateway/tokenizers/: BUILD.bazel
src/invocation-plane-services/llm-gateway/util/: BUILD.bazel
src/invocation-plane-services/vanity-gateway/gateway_config/: BUILD.bazel
src/invocation-plane-services/vanity-gateway/middleware/: BUILD.bazel
src/invocation-plane-services/vanity-gateway/pool/: BUILD.bazel
src/invocation-plane-services/vanity-gateway/router/: BUILD.bazel
src/libraries/rust/stargate/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  buf.yaml  rust-toolchain.toml
src/libraries/rust/stargate/.memory/: README.md
(+511 files in other folders)
