load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "admin.go",
        "agent_skill.go",
        "apikey.go",
        "assets.go",
        "cluster.go",
        "cluster_registration.go",
        "cluster_utils.go",
        "deploy.go",
        "exit_code_error.go",
        "function.go",
        "init.go",
        "json_output.go",
        "refresh.go",
        "registry.go",
        "root.go",
        "self_hosted.go",
        "self_hosted_check.go",
        "self_hosted_down.go",
        "self_hosted_install.go",
        "self_hosted_status.go",
        "self_hosted_uninstall.go",
        "self_hosted_up.go",
        "status.go",
        "undeploy.go",
        "version.go",
    ],
    importpath = "nvcf-cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/clis/nvcf-cli/internal/agentskill",
        "//src/clis/nvcf-cli/internal/apikeys",
        "//src/clis/nvcf-cli/internal/client",
        "//src/clis/nvcf-cli/internal/logging",
        "//src/clis/nvcf-cli/internal/selfhosted",
        "//src/clis/nvcf-cli/internal/selfhosted/auth",
        "//src/clis/nvcf-cli/internal/selfhosted/installlock",
        "//src/clis/nvcf-cli/internal/selfhosted/kubectx",
        "//src/clis/nvcf-cli/internal/selfhosted/progress",
        "//src/clis/nvcf-cli/internal/selfhosted/status",
        "//src/clis/nvcf-cli/internal/selfhosted/teardown",
        "//src/clis/nvcf-cli/internal/state",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@io_k8s_apiextensions_apiserver//pkg/client/clientset/clientset",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/clientcmd",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_term//:term",
    ],
)

go_test(
    name = "cmd_test",
    srcs = [
        "agent_skill_test.go",
        "cluster_registration_test.go",
        "exit_code_error_test.go",
        "registry_test.go",
        "self_hosted_check_test.go",
        "self_hosted_down_test.go",
        "self_hosted_install_test.go",
        "self_hosted_status_test.go",
        "self_hosted_test.go",
        "self_hosted_uninstall_test.go",
        "self_hosted_up_test.go",
    ],
    embed = [":cmd"],
    deps = [
        "//src/clis/nvcf-cli/internal/client",
        "//src/clis/nvcf-cli/internal/selfhosted",
        "//src/clis/nvcf-cli/internal/selfhosted/auth",
        "//src/clis/nvcf-cli/internal/selfhosted/progress",
        "//src/clis/nvcf-cli/internal/selfhosted/teardown",
        "//src/clis/nvcf-cli/internal/state",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@io_k8s_apiextensions_apiserver//pkg/client/clientset/clientset",
        "@io_k8s_client_go//kubernetes",
    ],
)
