# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "nvcf",
    srcs = [
        "client.go",
        "types.go",
    ],
    importpath = "github.com/NVIDIA/nvcf/src/invocation-plane-services/llm-gateway/nvcf",
    visibility = ["//visibility:public"],
    deps = [
        "//nvcf/pb",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
    ],
)

alias(
    name = "go_default_library",
    actual = ":nvcf",
    visibility = ["//visibility:public"],
)

go_test(
    name = "nvcf_test",
    srcs = ["client_test.go"],
    embed = [":nvcf"],
    deps = [
        "//nvcf/pb",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//test/bufconn",
    ],
)
