# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ratelimitsync",
    srcs = ["runtime.go"],
    importpath = "github.com/NVIDIA/nvcf/src/invocation-plane-services/llm-gateway/ratelimitsync",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//pubsub",
        "//ratelimit",
        "//util",
        "@com_github_nats_io_nats_go//:nats_go",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ratelimitsync",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ratelimitsync_test",
    srcs = ["runtime_test.go"],
    embed = [":ratelimitsync"],
    deps = ["//config"],
)
