# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "templating",
    srcs = [
        "doc.go",
        "engine.go",
    ],
    importpath = "github.com/NVIDIA/nvcf/src/invocation-plane-services/llm-gateway/templating",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/must",
        "//internal/ptr",
        "//models",
        "//templating/output",
        "//templating/prompt",
        "//templating/tools",
        "@com_github_nvidia_lpu_minijinja//:minijinja",
        "@com_github_rs_zerolog//log",
    ],
)

alias(
    name = "go_default_library",
    actual = ":templating",
    visibility = ["//visibility:public"],
)

go_test(
    name = "templating_test",
    srcs = ["integration_test.go"],
    # Integration test needs tokenizer fixtures under lib/tokenizers/vendor/
    # which aren't visible from the Bazel sandbox. Tag manual so
    # `bazel test //...` skips it; run explicitly with the right
    # CGO_LDFLAGS + working dir when needed.
    tags = ["manual"],
    deps = [
        ":templating",
        "//internal/ptr",
        "//models",
        "//templating/prompt",
        "//templating/tools",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
