# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tokenizers",
    srcs = [
        "cache.go",
        "count.go",
        "harmony.go",
        "rust_tokenizers.go",
        "tokenizers.go",
    ],
    importpath = "github.com/NVIDIA/nvcf/src/invocation-plane-services/llm-gateway/tokenizers",
    visibility = ["//visibility:public"],
    deps = [
        "//cache",
        "//internal/must",
        "//internal/ptr",
        "//models",
        "//util",
        "@com_github_daulet_tokenizers//:tokenizers",
        "@com_github_nvidia_lpu_harmony//:harmony",
        "@com_github_rs_zerolog//log",
        "@org_golang_x_sync//errgroup",
    ],
)

alias(
    name = "go_default_library",
    actual = ":tokenizers",
    visibility = ["//visibility:public"],
)
