# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "util",
    srcs = [
        "keylocks.go",
        "olric.go",
        "olric_k8s.go",
    ],
    importpath = "github.com/NVIDIA/nvcf/src/invocation-plane-services/llm-gateway/util",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//internal/must",
        "//telemetry",
        "@com_github_olric_data_olric//:olric",
        "@com_github_olric_data_olric//config",
        "@com_github_olric_data_olric//pkg/service_discovery",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
    ],
)

alias(
    name = "go_default_library",
    actual = ":util",
    visibility = ["//visibility:public"],
)

go_test(
    name = "util_test",
    srcs = [
        "olric_discovery_test.go",
        "olric_k8s_test.go",
    ],
    embed = [":util"],
    deps = [
        "//config",
        "@com_github_olric_data_olric//config",
        "@com_github_stretchr_testify//require",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes/fake",
    ],
)
